repair the overflow on hover card

--- a/frontend/src/components/Carousel/style.css
+++ b/frontend/src/components/Carousel/style.css
@@ -1,3 +1,3 @@
 .swiper {
-  overflow: hidden;
+  overflow: visible;
 }
